# AI_ML_and_Generative_AI

AI_ML/: Saanjh_AI_Interview_Prep.md
AI_ML/Feature_Scalling/Standardization/NoteBook_Model_Train/: Standardization.ipynb
Generative_AI/: pyproject.toml  requirements.txt
Generative_AI/My_LangChain/: pyproject.toml  requirements.txt
Generative_AI/My_LangChain/Generativeai1/: 1-langchain_intro.ipynb  2-Tools.ipynb  3-agentintro.ipynb  4-agentmutlipletools.ipynb  5-messages.ipynb  6-Structure_output.ipynb  7-memory.ipynb  8-midleware.ipynb
Generative_AI/RAG/Document_Loader/: Cricket_Info.txt  directory_loder.ipynb  pdf_loder.ipynb  text_loder.ipynb  web_based_loader.ipynb
